build-images.yml: Install dependencies

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -95,42 +95,18 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Setup requirements
+        run: sudo apt-get update && apt-get install -y parted qemu-user-static pbzip2
       - name: Build RPI SD Image
         id: build-rpi
         run: |
           set -e
-          #echo "Setup ssh"
-          #mkdir -p "$HOME/.ssh"
-          #ssh-keygen -t ed25519 -f "$HOME/.ssh/automation_ssh_key" -N ""
-          #chmod 0600 "$HOME/.ssh/automation_ssh_key"
-          #eval "$(ssh-agent)"
-          #ssh-add "$HOME/.ssh/automation_ssh_key"
-          #hcloud ssh-key create --name "rpi-build-${{ env.UID}}" --public-key-from-file "$HOME/.ssh/automation_ssh_key.pub"
-          #hcloud server create --image debian-11 --name "ncp-builder-${{ env.UID }}" --type cx11 --ssh-key "rpi-build-${{ env.UID }}"
-          #SSH_OPTIONS=(-o "StrictHostKeyChecking=no" -o "UserKnownHostsFile=/dev/null" -i "$HOME/.ssh/automation_ssh_key")
-          #ssh_cmd=(ssh "root@$(hcloud server ip "ncp-builder-${{ env.UID }}")" "${SSH_OPTIONS[@]}")
-          #for i in {1..5}
-          #do
-          #  "${ssh_cmd[@]}" bash -c "echo Server is online" && break;
-          #  [[ $i -eq 5 ]] && {
-          #    echo 'Failed to connect to hcloud server (timeout reached)!'
-          #    exit 1
-          #  }
-          #  sleep 5
-          #done
           IMG="NextCloudPi_RPi_$( date  "+%m-%d-%y" ).img"
           TAR="$( basename "$IMG" .img ).tar.bz2"
-          #"${ssh_cmd[@]}" bash <<EOF
-          apt-get update && apt-get install -y git zip unzip parted binfmt-support qemu-user-static pbzip2
-          git clone https://github.com/nextcloud/nextcloudpi.git
-          cd nextcloudpi
-          git checkout "${{ env.VERSION }}"
           wget -q https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-aarch64-static -O ./qemu-aarch64-static
           ./build/build-SD-rpi.sh
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
-          #EOF
-          #scp -r "${SSH_OPTIONS[@]}" "root@$(hcloud server ip "ncp-builder-${{ env.UID }}"):nextcloudpi/output" ./
           echo "::set-output name=artifact_name::${TAR}"
       - name: upload RPI image to artifact store
         uses: actions/upload-artifact@v3
@@ -138,21 +114,6 @@ jobs:
           name: ${{ github.run_id }}-rpi-image
           path: output/${{ steps.build-rpi.outputs.artifact_name }}
           if-no-files-found: error
-  
-#  cleanup-rpi:
-#    if: ${{ always() }}
-#    needs:
-#      - build-rpi
-#    runs-on: ubuntu-latest
-#    env:
-#      HCLOUD_TOKEN: "${{ secrets.TEST_AUTOMATION_HCLOUD_API_TOKEN }}"
-#      UID: "${{ github.run_id }}-rpi"
-#    steps:
-#      - uses: 3bit/setup-hcloud@v1
-#      - name: "Cleanup rpi server"
-#        run: |
-#          hcloud ssh-key delete "rpi-build-${{ env.UID}}" || echo "Error deleting ssh key!"
-#          hcloud server delete "ncp-builder-${{ env.UID }}"
   
   build-armbian:
     runs-on: ubuntu-latest
@@ -175,11 +136,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Setup requirements
+        run: sudo apt-get update && apt-get install -y pbzip2
       - name: "Build Armbian"
+        id: build-armbian
         run: |
+          set -x
           export LIB_TAG=master
           board_params=(${{ matrix.board}})
           ./build/build-SD-armbian.sh "${board_params[@]}"
+          artifacts=(output/${board_params[1]}*)
+          echo "::set-output name=artifact_name::${artifacts[0]}"
+          
 
   release:
     needs:
