--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -95,16 +95,16 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup requirements
-        run: sudo apt-get update && apt-get install -y parted qemu-user-static pbzip2
       - name: Build RPI SD Image
         id: build-rpi
         run: |
           set -e
-          IMG="NextCloudPi_RPi_$( date  "+%m-%d-%y" ).img"
-          TAR="$( basename "$IMG" .img ).tar.bz2"
           wget -q https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-aarch64-static -O ./qemu-aarch64-static
           ./build/build-SD-rpi.sh
+      - name: Pack RPI Image
+        run: |
+          IMG="NextCloudPi_RPi_$( date  "+%m-%d-%y" ).img"
+          TAR="$( basename "$IMG" .img ).tar.gz"
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
           echo "::set-output name=artifact_name::${TAR}"
@@ -122,6 +122,8 @@ jobs:
     defaults:
       run:
         shell: bash
+    outputs:
+      artifact_name: ${{ steps.pack-armbian.outputs.artifact_name }}
     strategy:
       matrix:
         board:
@@ -136,17 +138,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup requirements
-        run: sudo apt-get update && apt-get install -y pbzip2
       - name: "Build Armbian"
-        id: build-armbian
         run: |
           set -x
           export LIB_TAG=master
           board_params=(${{ matrix.board}})
           ./build/build-SD-armbian.sh "${board_params[@]}"
-          artifacts=(output/${board_params[1]}*)
-          echo "::set-output name=artifact_name::${artifacts[0]}"
+      - name: "Pack image"
+        id: pack-armbian
+        run: |
+          artifacts=("output/${board_params[1]}"*)
+          IMG="NextCloudPi_${board_params[1]}_$( date  "+%m-%d-%y" ).img"
+          TAR="$( basename "$IMG" .img ).tar.gz"
+          mv "${artifacts[0]}" "tmp/$IMG"
+          . ./build/buildlib.sh
+          pack_image "tmp/$IMG" "output/$TAR"
+          echo "::set-output name=artifact_name::${TAR}"
           
 
   release:
