--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -147,20 +147,20 @@ jobs:
       - name: "Pack image"
         id: pack-armbian
         run: |
-          artifacts=("output/${board_params[1]}"*)
+          artifacts=("armbian/output/Armbian"*.img)
           IMG="NextCloudPi_${board_params[1]}_$( date  "+%m-%d-%y" ).img"
-          TAR="$( basename "$IMG" .img ).tar.gz"
           mv "${artifacts[0]}" "tmp/$IMG"
+          TAR="$( basename "$IMG" .img ).tar.gz"
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
           echo "::set-output name=artifact_name::${TAR}"
-          
 
   release:
     needs:
       - build-lxd
       - test-lxd
       - build-rpi
+      - build-armbian
     #if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
     runs-on: ubuntu-latest
     env:
@@ -170,21 +170,21 @@ jobs:
       run:
         shell: bash
     steps:
-      - name: download LXD image from artifact store
+      - name: download images from artifact store
         uses: actions/download-artifact@v3
         with:
-          name: ${{ github.run_id }}-lxd-image
-          path: output-lxd
-      - name: download LXD image from artifact store
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ github.run_id }}-rpi-image
-          path: output-rpi
+          path: artifacts
       - name: Create Release
         run: |
-          for asset in output-*/*;
+          msg=()
+          assets=()
+          for asset in artifacts/**;
           do
-            md5sum "$asset"
+            msg+=(md5sum "$asset")
+            assets+=(-a "$asset")
           done
+          
+          echo "Assets: ${assets[*]}"
+          echo "Message: ${msg[*]}"
 
 
