build-images.yml: Fix image path in job test-lxd

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           set -x
           lxc delete -q -f ncp || true
-          lxc image import -q "../${{ needs.build-lxd.outputs.artifact_name }}" --alias "ncp/test"
+          lxc image import -q "./${{ needs.build-lxd.outputs.artifact_name }}" --alias "ncp/test"
           systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
