--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
 
   build-and-test-docker:
-    uses: ./.github/workflows/.build-docker.yml
+    uses: ./.github/workflows/build-docker.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
 
@@ -33,7 +33,8 @@ jobs:
   docker-release:
     needs:
       - build-and-test-docker
-    if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+      - test-curl-installer
+    if: ${{ github.event_name == 'push' && github.ref_type == 'tag' && false }}
     runs-on: ubuntu-latest
     steps:
       - name: Login to DockerHub
@@ -76,6 +77,7 @@ jobs:
     needs:
       - build-and-test-lxd
       - build-sd-images
+      - test-curl-installer
     runs-on: ubuntu-latest
     env:
       UID: "${{ github.run_id }}-rpi"
