build-sd-images.yml: Fix rpi image timeout

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -38,8 +38,10 @@ jobs:
           do
             sudo losetup | grep "${IMG}" || break;
             [[ "$i" -lt 10 ]] || { echo "Timeout while waiting for image to unount"; exit 1; }
+            sleep 6
+            echo "Retrying ($i out of 10)"
           done
-          
+
           echo "::set-output name=image::${IMG}"
       - name: Pack RPI Image
         id: pack-rpi
