--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,8 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           path: artifacts
-      - name: Create Release
+      - name: Prepare Release
+        id: prepare-release
         run: |
           mkdir -p release
           cd release
@@ -118,13 +119,16 @@ jobs:
 
           echo "Assets: ${assets[*]}"
           echo "Message: ${checksums[*]}"
+          echo "::set-output name=assets::$(printf " %q" "${IMG[@]}")"
       - name: Publish
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          hub release create "${assets[@]}" -F - "${{ env.VERSION }}" <<EOF
+          hub release create ${{ steps.prepare-release.outputs.assets }} -F - "${{ env.VERSION }}" <<EOF
           $(git tag -n10 "${{ env.VERSION }}" || echo "No tag message found")
+
+          ---
 
           [Docker images](https://hub.docker.com/r/ownyourbits/nextcloudpi)
 
