system_tests.py: Use systemd-run for testing systemd containers

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -95,7 +95,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo machinectl shell ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
@@ -128,7 +128,7 @@ jobs:
               tail -n 20 geckodriver.log >&2 || true
               echo "================"
               echo "ncp.log: "
-              sudo machinectl shell ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
+              sudo systemd-run --wait --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log"
               sleep 6
               continue
             }
