vm-tests.yml, build-docker.yml: Don't run on */cicd/... branches

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -11,8 +11,8 @@ on:
         required: true
         type: string
   push:
-    branches:
-      - "**"
+    branches-ignore:
+      - '*/cicd/**'
   pull_request:
 
 jobs:
