--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -10,7 +10,6 @@ jobs:
   build-rpi:
     runs-on: ubuntu-latest
     env:
-      HCLOUD_TOKEN: "${{ secrets.TEST_AUTOMATION_HCLOUD_API_TOKEN }}"
       UID: "${{ github.run_id }}-rpi"
       VERSION: "${{ inputs.git_ref }}"
     defaults:
@@ -19,7 +18,6 @@ jobs:
     outputs:
       artifact_name: ${{ steps.pack-rpi.outputs.artifact_name }}
     steps:
-      - uses: 3bit/setup-hcloud@v1
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Checkout code
@@ -51,6 +49,38 @@ jobs:
           . ./build/buildlib.sh
           pack_image "tmp/$IMG" "output/$TAR"
           echo "::set-output name=artifact_name::${TAR}"
+
+      - name: upload RPI image to artifact store
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.run_id }}-rpi-image
+          path: output/${{ steps.pack-rpi.outputs.artifact_name }}
+          if-no-files-found: error
+
+  test-rpi:
+    needs: build-rpi
+    runs-on: ubuntu-latest
+    env:
+      UID: "${{ github.run_id }}-rpi"
+      VERSION: "${{ inputs.git_ref }}"
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          ref: "${{ env.VERSION }}"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.run_id }}-rpi-image
+          path: output/${{ needs.build-rpi.outputs.artifact_name }}
+          if-no-files-found: error
+      - name: Extract image
+        run: |
+          set -e
+          tar xf "output/${{ needs.build-rpi.outputs.artifact_name }}"
+          mv "$( basename "${{ needs.build-rpi.outputs.artifact_name }}" .tar.gz ).img" ncp.img
       - name: Prepare test
         run: |
           set -e
@@ -59,7 +89,7 @@ jobs:
           sudo rm -rf raspbian_root
           sudo mkdir -p raspbian_root
           . ./build/buildlib.sh
-          mount_raspbian "${{ steps.build-rpi.outputs.image }}"
+          mount_raspbian "ncp.img"
           sudo cp qemu-aarch64-static raspbian_root/usr/bin/
           echo 'Mutex posixsem' | sudo tee -a raspbian_root/etc/apache2/mods-available/ssl.conf
       - name: Test image
@@ -139,13 +169,6 @@ jobs:
           result=$?
           sudo machinectl terminate ncp || true
           exit "$result"
-
-      - name: upload RPI image to artifact store
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.run_id }}-rpi-image
-          path: output/${{ steps.pack-rpi.outputs.artifact_name }}
-          if-no-files-found: error
 
   build-armbian:
     runs-on: ubuntu-latest
